--- a/src/components/Next/Next.scss
+++ b/src/components/Next/Next.scss
@@ -1,3 +1,11 @@
 @use "../../styles/partials/global" as *;
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variable" as *;
+
+.Next {
+  &__image {
+    width: 40%;
+    border-radius: 0.25rem;
+    display: flex;
+  }
+}
