add more features

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
 @use "./styles/partials/global" as *;
 @use "./styles/partials/typography" as *;
 @use "./styles/partials/variable" as *;
+
+.Section {
+  @include desktop {
+    display: flex;
+  }
+}
