--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -2,16 +2,136 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variable" as *;
 
-.Comments__icon {
-  width: 2.25rem;
-  height: 2.25rem;
-  object-fit: cover;
-  border-radius: 50%;
-
-  @include tablet {
-    width: 2.5rem;
-    height: 2.5rem;
-
-    left: 100rem;
+.Comments {
+  @include desktop {
+    padding-left: 15rem;
+    width: 120%;
   }
+  &__top {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  &__title1 {
+    @include mobileSubHeader;
+    font-weight: 600;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  &__form {
+    display: flex;
+  }
+  &__right {
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+  &__right1 {
+    @include tablet {
+      width: 70%;
+    }
+  }
+
+  &__title {
+    @include mobileSubHeader;
+    color: $PrimaryColor3;
+    font-weight: 500;
+    padding-bottom: 1rem;
+    @include tablet {
+      @include desktopSubHeader;
+    }
+  }
+  &__box {
+    @include mobileBodyCopy;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    height: 6rem;
+    border-radius: 0.25rem;
+    border-color: $SecondaryColor3;
+    background-color: $SecondaryColor4;
+    width: 100%;
+    @include tablet {
+      @include desktopBodyCopy;
+      height: 1.5rem;
+      width: 100%;
+    }
+    @include desktop {
+      width: 90%;
+    }
+  }
+  &__button {
+    font-size: 1rem;
+    font-weight: 500;
+    color: $PrimaryColor4;
+    background-color: $PrimaryColor2;
+    border: none;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+
+    @include tablet {
+      @include desktopLabels;
+      font-weight: 500;
+      width: 10rem;
+      height: 2.5rem;
+    }
+
+    @include desktop {
+      width: 8rem;
+    }
+  }
+
+  &__icon {
+    width: 3rem;
+    height: 3rem;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  &__avatar {
+    background-color: $SecondaryColor3;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+  }
+
+  &__sec {
+    display: flex;
+    justify-content: space-around;
+  }
+  &__section {
+    width: 80%;
+  }
+  &__namedate {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__paragraph {
+    @include mobileBodyCopy;
+    @include tablet {
+      padding-bottom: 1.5rem;
+    }
+  }
+  &__name {
+    @include mobileSubHeader;
+    font-weight: 500;
+    padding-bottom: 1rem;
+
+    @include tablet {
+      padding-bottom: 1.5rem;
+    }
+  }
+  &__date {
+    @include mobileSubHeader;
+    color: $PrimaryColor3;
+    font-weight: 400;
+  }
+}
+
+ul {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
