--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,8 @@
     width: 30%;
     display: block;
     @include tablet {
-      width: 150%;
+      padding-left: 2.25rem;
+      width: 100%;
     }
   }
   &__searchsection {
@@ -35,15 +36,15 @@
   }
 
   &__icon {
-    width: 2.25rem;
+    width: 3rem;
 
-    height: 2.25rem;
+    height: 3rem;
     object-fit: cover;
     border-radius: 50%;
 
     @include tablet {
-      width: 2.5rem;
-      height: 2.5rem;
+      width: 3rem;
+      height: 3rem;
       position: sticky;
       left: 100rem;
     }
@@ -56,26 +57,27 @@
     border-style: solid;
     border-radius: 0.25rem;
     width: 25rem;
-    height: 2.25rem;
+    height: 3rem;
 
     @include tablet {
-      height: 2.5rem;
+      height: 3rem;
     }
 
     &::placeholder {
-      padding-left: 30px;
+      padding-left: 2rem;
     }
   }
   &__button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2.5rem;
+    height: 3rem;
     width: 100%;
     background-color: $PrimaryColor2;
     border: none;
     border-radius: 0.25rem;
     color: $PrimaryColor4;
+    font-weight: 700;
     @include tablet {
       width: 10rem;
     }
