--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -10,12 +10,26 @@
   &__section {
     position: relative;
     display: inline-block;
+    @include desktop {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__des {
     padding-left: 1rem;
     padding-right: 1rem;
     padding-bottom: 1rem;
+    @include desktop {
+      padding-left: 15rem;
+      padding-right: 15rem;
+    }
+  }
+  &__title {
+    padding-top: 1rem;
+    @include tablet {
+      padding-top: 1.5rem;
+    }
   }
   &__sub {
     display: flex;
@@ -25,7 +39,7 @@
 
     @include tablet {
       flex-direction: row;
-      justify-content: baseline;
+      align-items: baseline;
     }
   }
   &__author {
@@ -80,5 +94,15 @@
     @include tablet {
       flex-direction: row;
     }
+  }
+
+  &__description {
+    @include mobileBodyCopy;
+  }
+}
+
+.Divider1 {
+  @include tablet {
+    display: none;
   }
 }
