--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,10 @@
   @include desktop {
     display: flex;
   }
+  &__desktopdisplay {
+    @include desktop {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
